crates/forge_app/src/snapshots/forge_app__operation__tests__follow_up_with_question.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
<feedback>Which file would you like to edit?</feedback>
