crates/forge_app/src/snapshots/forge_app__operation__tests__fs_patch_with_warning.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
<file_diff
  path="/home/user/large_file.txt"
  total_lines="3"
><![CDATA[1 1 | line1
  2 |+new line
2 3 | line2
]]>
<warning>
<message>Syntax validation failed</message>
<file
  path="/home/user/large_file.txt"
>
</file>
<details>The file was written successfully but contains 1 syntax error(s)</details>
<error
  line="5"
  column="10"
><![CDATA[Invalid syntax]]>
</error>
<suggestion>Review and fix the syntax issues</suggestion>
</warning>
</file_diff>
